# goxlr-firmware-updater

./: Cargo.toml  LICENSE  README.md
src/: downloader.rs  firmware.rs  goxlr.rs  main.rs  preflight.rs
