[package]
name = "goxlr-firmware-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"
rfd = "0.11.4"
byteorder = "1.4.3"
tokio = { version = "1.29.1", features = ["full"] }

goxlr-usb = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git", branch="dev-1.0.0" }

[target.'cfg(target_os = "windows")'.dependencies]
tasklist = "0.2.13"