[package]
name = "goxlr-firmware-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
rfd = "0.14.1"
byteorder = "1.4.3"
tokio = { version = "1.39.2", features = ["full"] }
reqwest = {version = "0.12.5", features = ["blocking", "stream"]}

goxlr-usb = { git="https://github.com/GoXLR-on-Linux/goxlr-utility.git" }

[target.'cfg(target_family = "unix")'.dependencies]
sysinfo = "0.30.5"

[target.'cfg(target_os = "windows")'.dependencies]
tasklist = "0.2.13"